remove small words

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="page clearfix" index>
     <div class="left">
         <h1>Welcome to fatcat's Blog!</h1>
-        <small>The world has changed......</small>
+		<!-- <small>The world has changed......</small> -->
         <hr>
         <ul>
             {% for post in paginator.posts %}
